# Novinai

./: .env.pc  .gitignore  3080_setup.md  COMPREHENSIVE_FIX_PROMPT.md  CONTRIBUTING.md  CRITICAL_SECURITY_FIX.sh  Cargo.toml  Cargo.toml.backup_before_api  DEPLOYMENT.md  DEPLOY_TO_GITHUB.md  Dockerfile  Dockerfile.deepk  Dockerfile.sidecar  GITHUB_SETUP_SUMMARY.md  LICENSE  MOBILE_PHASE2_PLAN.md  Makefile  OVERNIGHT_REVIEW_DEMO.md  PRODUCTION_STATUS.md  PRODUCTION_VALIDATION_SUMMARY.md  README-DEEPK-NATS.md  README.md  UPGRADE_TO_10_10_PLAN.md  adaptive_time_model.rs  add_types.txt  ai_behavior_test.rs  ai_logic_analysis.rs  alert_severity_system_summary.md  bayesian_decision_engine.rs  behavioral_stacking_fix.rs  benchmark_deep_worker.py  calibration_fix.rs  compare_2am_systems.rs  complete_benchmark_validation.sh  configure_gpu_worker.py  context_absence.rs  create-deepk-service.sh  create_demo_pr.sh  deep_worker.py  demo_awareness_suppression.py  (+59 more)
backend/: Dockerfile  integration_guide.md
backend/config/: redis.conf
backend/services/: candidate_store.py  deep_worker_v2.py  lite_brain.py  load_testing.py  metrics.py  scheduler.py  security.py  server_lite_scorer.py
examples/: awareness_suppression_demo.rs
src/: image_preloader.rs  lib.rs  pipeline.rs  vps_client.rs
src/adversarial/: mod.rs
src/api/: auth.rs  database.rs  events.rs  mod.rs  models.rs  routes.rs  server.rs  websocket.rs
src/api/migrations/: 001_users.sql  002_homes.sql  003_alerts.sql  004_events.sql
src/core/: mod.rs
src/fusion/: mod.rs
src/intelligence/: mod.rs
src/learning/: mod.rs
src/models/: mod.rs
src/overnight/: config.rs  manager.rs  mod.rs  scheduler.rs  storage.rs  summary.rs  summary_old.rs
src/perception/: mod.rs
src/prediction/: behavioral.rs  causal.rs  fusion.rs  mod.rs  temporal.rs
src/reasoning/: mod.rs
src/tests/: mod.rs  person_detection.rs
src/thinking/: active_reasoner.rs  decision_counterfactuals.rs  incident_engine.rs  llm_client.rs  llr_integration.rs  mod.rs  summarizer.rs
src/utils/: mod.rs
